# face_classification

./: CMakeLists.txt  README.md  package.xml
ros/doc/: README.md  pipeline.xml
ros/launch/: face_classification_simple.launch
ros/msg/: FaceClassificationArray.msg  face_classification_array.msg
ros/src/face_classification_ros/: face_classification_node.py
